@startuml Loadout

skinparam classAttributeIconSize 0
hide empty fields
hide empty methods

class LoadoutEntry {
    +position() : Point2D
    +packId() : String
    +pieceId() : String
}

class Loadout {
    +withName(newName : String) : Loadout
    +withEntries(newEntries : List<LoadoutEntry>) : Loadout
    +duplicate(newName : String) : Loadout
    +mirrored() : Loadout
    +getEntries() : List<LoadoutEntry>
    +isValid(definitions : Map<String, PieceDefinition>, standardLoadout : Loadout) : boolean
    +{static} create(name : String, entries : List<LoadoutEntry>) : Loadout
}

Loadout "1" *-- "*" LoadoutEntry : entries

class ValidationContext {
    +getEntries() : List<LoadoutEntry>
    +getDefinitions() : Map<String, PieceDefinition>
    +getExpectedWeight() : int
    +getStandardLoadout() : Loadout
}

Loadout ..> ValidationContext
ValidationContext --> Loadout : standardLoadout
Loadout ..> ChessBoardImpl : uses CHESSBOARD_SIZE

@enduml
